# docgen

./: .buildinfo  .gitignore  CMakeLists.txt  LICENSE  README.md  api-index.html  genindex.html  getting-started.html  hello_world.html  index.html  objects.inv  requirements.txt  search.html  searchindex.js
.github/workflows/: gh-pages.yml
_sources/: index.rst.txt
doc/: CMakeLists.txt  Doxyfile  Makefile  package-lock.json  package.json
doc/bytefield/: packet.clj
doc/scripts/: dox_header_gen.py
doc/source/: api-index.rst  conf.py.in  getting-started.md  hello_world.rst
doc/source/_ext/: codefile.py  helloworld.py
doc/source/_static/: extra.css  extra.js
doc/source/_templates/: layout.html
examples/: CMakeLists.txt  print_greeting.cpp  type_inspect.cpp
src/: hello_world.cpp  hello_world.hpp
test/: CMakeLists.txt  test_greeting.cpp
